app/src/main/java/com/example/wocombo/core/domain/errors/CurrencyFailures.kt
package com.example.wocombo.core.domain.errors

import com.example.wocombo.common.functional.Failure

sealed class CurrencyFailures {
    object DownloadCurrenciesFailure : Failure.FeatureFailure()
}